All problems solved and Mvc mistakes corrected. Main page designd. Layout changed to flexiable. Irepositor file filled. repository functions are ready for implement

--- a/src/eCommerce.Web/Properties/launchSettings.json
+++ b/src/eCommerce.Web/Properties/launchSettings.json
@@ -3,16 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:48434",
-      "sslPort": 44388
+      "applicationUrl": "http://localhost:50001",
+      "sslPort": 44381
     }
   },
   "profiles": {
-    "eCommerce.Mvc": {
+    "eCommerce.Web": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7206;http://localhost:5293",
+      "applicationUrl": "https://localhost:7160;http://localhost:5171",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
