--- a/src/eCommerce.Service/eCommerce.Service.csproj
+++ b/src/eCommerce.Service/eCommerce.Service.csproj
@@ -6,4 +6,10 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Dtos\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
