Some changes in dtos

--- a/src/eCommerce.Service/eCommerce.Service.csproj
+++ b/src/eCommerce.Service/eCommerce.Service.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Dtos\Chats\" />
     <Folder Include="Dtos\Orders\" />
-    <Folder Include="Interfaces\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
