--- a/src/eCommerce.Web/eCommerce.Web.csproj
+++ b/src/eCommerce.Web/eCommerce.Web.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\eCommerce.Data\eCommerce.Data.csproj" />
+    <ProjectReference Include="..\eCommerce.Service\eCommerce.Service.csproj" />
   </ItemGroup>
 
   <ItemGroup>
